--- a/src/views/!/layouts/default.twig
+++ b/src/views/!/layouts/default.twig
@@ -49,7 +49,9 @@
             </li>
             <li class="verstak__tab" ng-show="breakpoints.length && element.name">
             <span class="verstak__tab-title">
-                <input type="number" step="10" max="2000"
+                <input type="number" step="10"
+                       min="320"
+                       max="2000"
                        class="verstak__breakpoint"
                        ng-model="breakpoint">px
             </span>
