--- a/public/fonts/uni-sans/uni-sans.css
+++ b/public/fonts/uni-sans/uni-sans.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'UniSans';
-    src:         url('uni_sans_thin.eot');
-    src:         url('uni_sans_thin.eot?#iefix') format('embedded-opentype'),
-                 url('uni_sans_thin.woff') format('woff'),
-                 url('uni_sans_thin.ttf') format('truetype');
+    src:         url('/packages/larakit/lk-verstak/fonts/uni-sans/uni_sans_thin.eot');
+    src:         url('/packages/larakit/lk-verstak/fonts/uni-sans/uni_sans_thin.eot?#iefix') format('embedded-opentype'),
+                 url('/packages/larakit/lk-verstak/fonts/uni-sans/uni_sans_thin.woff') format('woff'),
+                 url('/packages/larakit/lk-verstak/fonts/uni-sans/uni_sans_thin.ttf') format('truetype');
     font-weight: 100;
     font-style:  normal;
 }
